# UtilityEngine_Old

./: .gitignore  README.md
UtilityEngine/include/: application.hpp  base_defines.hpp  code_md5.hpp  com_hex_caster.hpp  com_less.hpp  com_md5.hpp  com_numeric_digit.hpp  com_random.hpp  com_service.hpp  com_service_manager.hpp  com_singleton.hpp  com_thread_pool.hpp  com_typename.hpp  db_mysql.hpp  db_mysqlpp.hpp  logger.hpp  mem_buffer.hpp  mem_container.hpp  mem_container.inl  mem_data_factory.hpp  mem_data_factory.inl  (+39 more)
UtilityTest/: ClientTest.cpp  DataFactory_Test.cpp  Mysql_Test.cpp  Other_Test.cpp  ServerTest.cpp  Service_Test.cpp  Singleton_Test.cpp  ThreadPool_Test.cpp  UtilityTest.cpp  UtilityTest.hpp
codelite/: UtilityEngine.workspace
vs2013/: mysql++-3.2.4.txt
vs2013/UtilityEngine/UtilityEngine/: CMakeLists.txt  UtilityEngine.vcxproj  UtilityEngine.vcxproj.filters
vs2013/UtilityEngine/UtilityEngine/UtilityEngine/Debug/: application.nativecodeanalysis.sarif  logger.nativecodeanalysis.sarif  mem_rotative_buffer.nativecodeanalysis.sarif  mem_stream_buffer.nativecodeanalysis.sarif  net_framework.nativecodeanalysis.sarif  net_io_service.nativecodeanalysis.sarif  net_io_service_epoll.nativecodeanalysis.sarif  net_io_service_iocp.nativecodeanalysis.sarif  net_session.nativecodeanalysis.sarif  net_session.nativecodeanalysis.xml  net_socket.nativecodeanalysis.sarif  task_dispatcher_balance.nativecodeanalysis.sarif  task_dispatcher_pool.nativecodeanalysis.sarif  task_object.nativecodeanalysis.sarif  tool_md5.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml
(+54 files in other folders)
